<resources>
    <string name="app_name">Mkbank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_branches">Branches</string>
    <string name="menu_news">News</string>
    <string name="menu_foreign_exchange">Foreign Exchange</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>
