<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_branches"
            android:title="@string/menu_branches" />
        <item
            android:id="@+id/nav_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_foreign_exchange"
            android:title="@string/menu_foreign_exchange" />
        <item
            android:id="@+id/nav_calculator"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/menu_contact_us" />

    </group>
</menu>
